--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -90,7 +90,7 @@
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
-  text-align: center;
+  text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -98,12 +98,13 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
+
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  border-color: rgb(136, 136, 136);
 }
+
 
 .card h3 {
   margin: 0 0 1rem 0;
@@ -123,9 +124,9 @@
 .refresh {
   margin-top: 20px;
   height: 2em;
-  transition: transform 0.3s;
+  transition: transform 0.5s;
   cursor: pointer;
-  /*margin-left: calc(50% - 1em);*/
+  margin-left: calc(50% - 1em);
 }
 
 .refresh:hover {
